// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-scene spec: Render logic -> should render loading overlay by default 1`] = `
<amplify-scene scenename="{'scene1'}">
  <mock:shadow-root>
    <div class="scene-container" id="scene-container-dom-id">
      <div class="scene" id="scene-dom-id">
        <amplify-scene-loading load-percentage="0"></amplify-scene-loading>
      </div>
      <div class="scene-bar">
        <span class="scene-actions"></span>
      </div>
    </div>
  </mock:shadow-root>
</amplify-scene>
`;

exports[`amplify-scene spec: Render logic -> should render scene action bar when 'isSceneLoaded' is true 1`] = `
<amplify-scene scenename="{'scene1'}">
  <mock:shadow-root>
    <div class="scene-container" id="scene-container-dom-id">
      <div class="scene" id="scene-dom-id">
        <amplify-scene-loading load-percentage="0"></amplify-scene-loading>
      </div>
      <div class="scene-bar">
        <span class="scene-actions">
          <amplify-icon-button name="sound" tooltip="Mute"></amplify-icon-button>
          <amplify-icon-button name="maximize" tooltip="Fullscreen"></amplify-icon-button>
        </span>
      </div>
    </div>
  </mock:shadow-root>
</amplify-scene>
`;
